moved schedule on the recurring tasks to the bottom, fixed issue of it flickering

--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -2,3 +2,17 @@
     max-width: 450px;
     padding: 50px;
 }
+
+.steps-card {
+    max-width: 300px;
+    min-height: 160px;
+    position: relative;
+}
+
+.steps-card:first-child {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
